--- a/BusTicketSystem.csproj
+++ b/BusTicketSystem.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="iTextSharp.LGPLv2.Core" Version="3.7.3" />
     <PackageReference Include="microsoft.entityframeworkcore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
